# python-project-structure

./: .gitignore  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/package_name/: __init__.py
src/package_name/cmd/: main.py
src/package_name/internal/: models.py
src/package_name/internal/config/: __init__.py  config.py
