# --- PROJECT CONFIGURATION --- #

[build-system]
requires = [
    "setuptools>=67",
    "setuptools_scm>=3.4",
    "setuptools-git-versioning>=1.13.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

# Metadata
# * See https://peps.python.org/pep-0621/
# * Version is set automatically using git tags, see
#   https://setuptools-git-versioning.readthedocs.io/en/stable/
[project]
name = "package-name"
dynamic = ["version"]
description = "Template repository showing how to create a modern Python microservice"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10.0"
license = {text = "MIT License"}
authors = [
    { name = "Change Me", email = "changeme@email.com"}
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "docopt == 0.6.2",
    "numpy == 1.24.2",
    "pathlib == 1.0.1",
    "psutil == 5.9.5",
    "requests == 2.31.0",
    "structlog == 22.1.0",
    "urllib3 == 1.26.15",
]

[project.optional-dependencies]
dev = [
    "ruff == 0.0.259",
    "unittest-xml-reporting == 3.2.0",
]

[project.scripts]
# Set the entrypoint for the CLI
packagename = "package_name.cmd.main:main"

[project.urls]
repository = "https://github.com/path/to/repo"

[tool.setuptools-git-versioning]
enabled = true

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.10"
plugins = [
    'numpy.typing.mypy_plugin'
]

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "D",   # pydocstyle
]
line-length = 100
ignore = ["D203", "D213", "ANN101"]
exclude = ["__init__.py"]

[tool.ruff.per-file-ignores]
"test*" = ["D", "ANN"]
